<?xml version="1.0"?>
<package format="3">
  <name>gestures_package</name>
  <version>0.0.0</version>
  <description>Package for detecting and processing hand gestures using 
ROS 2.</description>
  <maintainer email="djnighti@ucsd.edu">root</maintainer>
  <license>Specify your license here</license>

  <!-- ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-mediapipe</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

